--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#0000FF"><span class="say">Em yêu ới,</span><br>
+			      <font color="#0000FF"><span class="say">Em yêu ơi,</span><br>
 						<span class="say"> </span><br>
 						<span class="say">Em là người con gái anh yêu nhất :)</span><br>
 						<span class="say">Em xinh đẹp nhất !</span><br>
