--- a/index.html
+++ b/index.html
@@ -33,20 +33,17 @@
 						<span class="say">Em xinh đẹp nhất !</span><br>
 						<span class="say">Em đáng yêu nhất !</span><br>
 						<span class="say">Em cũng yêu anh nhất !</span><br>
-<<<<<<< HEAD
-                        <span class="say"><span class="space"></span> -- Yêu em thật nhiều <3 --</span><br>
-=======
                         <span class="say"><span class="space"></span> -- Yêu em nhiều <3 --</span><br>
->>>>>>> 2b41e24 (yeu html)
                         <span class="say"> </span>
-                        <span class="say">Ảnh của bọn mình này: </span>
+                        <span class="say">Chúng mình cũng có ảnh nè: </span>
 			  </font>
-              <img src="image/love.jpg" width="220" height="300">
+              <img src="image/love.jpg" class="img" width="170" height="300">
+	      <img src="image/love2.jpg" class="img" width="170" height="300">
       </div>
                 </div>
                 <div id="clock-box">
                     <span class="STYLE1"></span><font color="#FF0000">Ngốc ơi</font>
-<span class="STYLE1"> Bọn mình yêu nhau được:</span>
+<span class="STYLE1">, bọn mình yêu nhau được:</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
